manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kisandkasse-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: tag.kisandkasse
      http:
        paths:
          - path: /code-server
            pathType: Prefix
            backend:
              service:
                name: code-server
                port:
                  number: 8080
          - path: /jupyterhub
            pathType: Prefix
            backend:
              service:
                name: jupyterhub
                port:
                  number: 8000
          - path: /ollama
            pathType: Prefix
            backend:
              service:
                name: ollama
                port:
                  number: 11434
